|
Quick Lists
|
|
Bug ID:
|
6692301
|
|
Votes
|
0
|
|
Synopsis
|
Side effect in NumberFormat tests with -server -Xcomp (all platforms, 6u5 perf release b01)
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
b02
|
|
Release Fixed
|
hs12(b03)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
1-Very High
|
|
Related Bugs
|
6667580
,
6686791
|
|
Submit Date
|
22-APR-2008
|
|
Description
|
JCK: JCK-runtime-6a alt. bundle
J2SE: FAIL - 6u5p b01, PASS 6u5, 6u4p
Platform[s]: FAIL - All
switch/Mode: FAIL - -server -Xcomp
Test api/java/text/NumberFormat/Format has side effect since 6u5p b01. For example:
java -server -Xcomp -Xfuture -classpath K:\\Links\\stt\\jck_promotions\\6a\\fcs\\alt2\\binaries\\JCK-runtime-6a\\classes javasoft.sqe.tests.api.java.text.NumberFormat.FormatTests -TestCaseID NumberFormat0010
test reports:
NumberFormat0006: Passed. OKAY
passes. At the sampe time when run after another test it fails:
java -server -Xcomp -Xfuture -classpath K:\\Links\\stt\\jck_promotions\\6a\\fcs\\alt2\\binaries\\JCK-runtime-6a\\classes javasoft.sqe.tests.api.java.text.NumberFormat.FormatTests -TestCaseID NumberFormat0006 NumberFormat0010
NumberFormat0006: Passed. OKAY
NumberFormat0010: Failed. Failed
Method format(Object, StringBuffer, FieldPosition) incorrect
StringBuffer passed to format(Long, StringBuffer, FieldPosition) method
expected value of StringBuffer =
passed value =
STATUS:Failed.test cases: 2; passed: 1; failed: 1; first test case failure: NumberFormat0010
Test does nothing except assigning one StringBuffer instance to a member of class NumberFormatTest then comparing both objects with ==.
Steps to reproduce:
run commands above.
Unix path to JCK is:
/net/stt-13.russia.sun.com/export/stt/jck_promotions/6a/fcs/alt2/binaries/JCK-runtime-6a/classes
test sources:
/net/stt-13.russia.sun.com/export/stt/jck_promotions/6a/fcs/alt2/binaries/JCK-runtime-6a/tests
Posted Date : 2008-04-22 21:07:18.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
See evaluation of 6686791.
Posted Date : 2008-04-22 21:07:18.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |